spade-tests/src/snapshots/spade_tests__ast_lowering__generics_given_for_generic_type.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Generic arguments given for a generic type
  ┌─ testinput:3:18
  │
3 │     B { value: T<U> },
  │                  ^ T is a generic type
  │
  = note: A generic argument can not have generic types


